--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,471 @@
-.App {
-  text-align: center;
+:root {
+  --green1: #273e3f;
+  --green2: #14272b;
+  --green3: #142327;
+  --darkgreen: rgba(20, 20, 20, 0.6);
+  --darkgreen2: #14171c;
+  --highlight: #0ab4b4;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  margin:0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+h1, h2 {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.particle {
+  padding-left: 42px;
+  z-index: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* ----------Global backgrounds--------------- */
+.bg1 {
+  background-color: var(--green1);
+}
+
+.bg2 {
+  background-color: var(--green2);
+}
+
+.bg3 {
+  background-color: var(--green3);
+}
+
+.bg4 {
+  background-color: var(--darkgreen);
+}
+
+.bg5 {
+  background-color: var(--darkgreen2);
+}
+
+/* ----------Global highlights--------------- */
+.hl1 {
+  border: 2px solid var(--highlight);
+  border-top: none;
+  border-left: none;
+  border-right: none;
+}
+
+.hl2 {
+  border: 2px solid var(--highlight);
+  border-top: none;
+  border-right: none;
+}
+
+/* ----------Global Shadow--------------- */
+.bxs {
+  box-shadow: 3px 10px 20px 10px rgba(0, 0, 0, 0.5);
+}
+
+/* ----------Global bottom border--------------- */
+.borderb {
+  border-bottom: 1px solid;
+}
+
+/* -----------navbar----------  */
+
+.navbar {
+  height: 100vh;
+  width: 42px;
+  display: flex;
+  padding-left: 0;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  border-right: 1px solid;
+  z-index: 2;
+}
+
+.menu-bars {
+  font-size: 2rem;
+  background: none;
+}
+
+.nav-menu {
+  width: 125px;
+  height: 100vh;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: -100%;
+  transition: 850ms;
+}
+
+.nav-menu.active {
+  left: 0;  
+  transition: 350ms;
+  z-index: 3;
+  
+}
+
+.nav-text {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  list-style: none;
+  height: 60px;
+}
+
+.nav-text a {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: white;
+  font-size: 18px;
+  width: 95%;
+  height: 100%;
+  padding: 0 16px;
+}
+
+.nav-text a:hover {
+  background-color: var(--green2);
+}
+
+.nav-menu-items {
+  padding-left: 0;
+  width: 100%;
+  align-items: center;
+  
+}
+
+.navbar-toggle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 80px;
+}
+
+.span-menu {
+  margin-left: 16px;
+}
+
+/* --------Sections------- */
+.sections {
+  padding-left: 42px;
+}
+
+/* ---------Home------------ */
+.main-home-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.title-container {
+  display: block;
+  position: relative;
+  z-index: 2;
+  padding: 5px;
+  width: 250px;
+  text-align: center;
+}
+
+/* ----------rotating text --------- */
+.react-rotating-text-cursor {
+  animation: blinking-cursor 0.8s cubic-bezier(0.68, 0.01, 0.01, 0.99) 0s infinite;
+}
+
+@keyframes blinking-cursor {
+  0% {
+    opacity: 0;
   }
-  to {
-    transform: rotate(360deg);
+  50% {
+    opacity: 1;
   }
+  100% {
+    opacity: 0;
+  }
+}
+/* ----------About------------ */
+
+.about-container {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  height: 100vh;
+  z-index: 2;
+}
+
+.about-heading-container {
+  display: block;
+  position: relative;
+  text-align: center;
+  width: 80%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.about-heading-container h2 {
+  font-size: 30px;
+  text-decoration: underline var(--highlight);
+}
+
+.about-p-img-container {
+  padding-top: 40px;
+}
+
+.about-img-container { 
+  padding-bottom: 50px;
+}
+
+.about-img {
+  border: 5px solid white;
+  width: 200px;
+  height: 220px;
+}
+
+.about-p-container {
+  color: white;
+  font-size: 16px;
+  padding: 15px;
+}
+
+/* --------projects--------- */
+.projects {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
+  align-items: center;
+}
+
+.projects-h2 {
+  font-size: 30px;
+  text-decoration: underline var(--highlight);
+  z-index: 2;
+}
+
+.project-cards {
+  display: block;
+  position: relative;  
+  z-index: 2;
+}
+
+.card {
+  display: flex;  
+  justify-content: center; 
+  position: relative; 
+  text-align: center;
+  color: white;
+  width: 195px;
+  padding: 30px 0px;
+  margin: 50px 50px 0 30px;
+}
+
+.actions {
+  display: block;
+  padding-top: 50px;
+  padding-left: 8%;
+  margin-right: -20%;
+}
+
+.modal {
+  border-radius: 6px;
+  padding: 16px 16px 10px 16px;
+  text-align: center;
+  width: 25vh;
+  top: 40vh;
+  z-index: 2;
+  position: fixed;
+}
+
+.btn-box {
+  display: flex;
+  justify-content: space-around;
+  padding: 5px;
+}
+
+.pop-btn {
+  color: white;
+  font-size: 12px;
+  padding: 5px 10px;
+}
+
+.backdrop {
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+}
+
+.btn {
+  font-size: 12px;
+  color: white;
+  padding: 10px 30px 10px 30px;
+  cursor: pointer;
+  transition: 0.4s;
+}
+
+.btn:hover {
+  background-color: var(--highlight);
+  border-color: white;
+}
+
+/* ---------Connect---------- */
+.connect-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  position: relative;
+  z-index: 1;
+}
+
+.formSection {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 250px;
+  color: white;
+}
+
+.info {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  height: 40%;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  /* ----this creates the line between form and text------- */
+  border-bottom: 10px solid rgba(30, 30, 30, 0.8);
+}
+
+.info h2 {
+  padding-bottom: 40px;
+}
+
+.info p {
+  font-size: 18px;
+}
+
+.sendForm {
+  z-index: -1;
+  padding: 40px 0;
+}
+
+.inputFields {
+  margin: 15px 0;
+  font-size: 16px;
+  padding: 10px;
+  width: 210px;
+  color: white;
+  outline: none;
+}
+
+#message {
+  width: 215px;
+  height: 100px;
+}
+
+.send-btn {
+  border: 1px solid var(--highlight);
+  font-size: 18px;
+  color: white;
+  margin-top: 20px;
+  padding: 10px 50px;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.send-btn:hover {
+  background: rgba(20, 20, 20, 1);
+  padding: 10px 80px;
+}
+
+@media screen and (min-width: 768px){ 
+  /*--------Home---------*/
+  .title-container {
+    height: 90px;
+    width: 300px;
+    padding: 20px;
+  }
+  /* -------About-------   */
+  .about-heading-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .about-heading-container h2 {
+    font-size: 45px;
+  }
+  .about-p-img-container {
+    padding-top: 80px;
+  }
+  .about-img-container { 
+    padding-bottom: 80px;
+  }
+  .about-img {
+    width: 300px;
+    height: 330px;
+  }
+  .about-p-container {
+    font-size: 18px;
+  }
+  /* -----Projects-----  */
+  .projects {
+    flex-direction: row;
+  }
+  .projects-h2 {
+    font-size: 45px;
+    padding-right: 40px;
+  }
+  .modal {
+    font-size: 30px;
+    width: 350px;
+  }
+  .pop-btn {
+    color: white;
+    font-size: 18px;
+    padding: 5px 15px;
+  }
+  /* ------Connect---- */
+  .formSection {
+    width: 80%;
+  }
+  .inputFields {
+    width: 250px;
+  }
+  #message {
+    width: 315px;
+    height: 150px;
+  }
+}
+
+@media screen and (min-width: 1020px){
+  /* -------About-------   */
+  .about-p-img-container{
+    display: flex;
+    justify-content: center;
+    align-content:center;
+    padding-top: 150px
+  }
+  .about-p-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50%;
+    height: 250px;
+  }
+  .about-img-container {
+    display:flex;
+    align-content:center;
+    padding: 25px 50px;
+  }
+  .about-img {
+    
+    border: 5px solid white;
+    width: 200px;
+    height: 220px;
+  }
+  /*------Projects-------*/
+  
 }
