--- a/src/App.css
+++ b/src/App.css
@@ -222,13 +222,27 @@ h1, h2 {
 
 .about-img-container { 
   padding-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.about-img {
+.octo {
   object-fit: contain;
-  border: 5px solid white;
-  width: 139px;
-  height: 250px;
+  width: 100px;
+  height: 100px;
+  clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
+}
+.img-me {
+  margin-left: -92px;
+}
+.img-wife {
+  margin-left: 50px;
+  margin-top: -30px;
+}
+.img-kiddos {
+  margin-left: -92px;
+  margin-top: -30px;
 }
 
 .about-p-container {
@@ -413,11 +427,24 @@ h1, h2 {
     padding-top: 80px;
   }
   .about-img-container { 
-    padding-bottom: 80px;
+    padding-bottom: 40px;
   }
-  .about-img {
-    width: 195px;
-    height: 350px;
+  .img-me {
+    width: 150px;
+    height: 150px;
+    margin-left: -135px;
+  }
+  .img-wife {
+    width: 150px;
+    height: 150px;
+    margin-left: 95px;
+    margin-top: -47px;
+  }
+  .img-kiddos {
+    width: 150px;
+    height: 150px;
+    margin-left: -135px;
+    margin-top: -47px;
   }
   .about-p-container {
     font-size: 18px;
