--- a/src/App.css
+++ b/src/App.css
@@ -207,8 +207,8 @@ h1, h2 {
   position: relative;
   text-align: center;
   width: 80%;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .about-heading-container h2 {
@@ -223,32 +223,177 @@ h1, h2 {
 .about-img-container { 
   padding-bottom: 30px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  justify-content:space-around;
+  padding-top: 15px;
 }
 
-.octo {
-  object-fit: contain;
+.me{
+  background-image: url("./img/HeadShot2.jpg");
+}
+.wife {
+  background-image: url("./img/Wife.jpg");
+}
+.kiddos {
+  background-image: url("./img/Kiddos.jpg");
+}
+
+
+.avatar {
   width: 100px;
   height: 100px;
-  clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
+  border-radius: 50%;
+  background-size: cover;
+  position: relative;
 }
-.img-me {
-  margin-left: -92px;
+
+/* this dictates the position of the tooltip*/
+.avatar::before,
+.avatar::after {
+  --scale: 0;
+  --arrow-size: 10px;
+  --tooltip-color: var(--darkgreen2);
+  
+  position: absolute;
+  top: -.25rem;
+  left: 50%;
+  transform: translateX(-50%) translateY(var(--translate-y, 0)) scale(var(--scale));
+  transition: 50ms transform;
+  transform-origin: bottom center;
 }
-.img-wife {
-  margin-left: 50px;
-  margin-top: -30px;
+
+.avatar::before {
+  --translate-y: calc(-100% - var(--arrow-size));
+  content: attr(data-tooltip);
+  color: white;
+  padding: .5rem;
+  border-radius: .3rem;
+  text-align: center;
+  width: max-content;
+  width: 100%;
+  background-color:var(--tooltip-color);
 }
-.img-kiddos {
-  margin-left: -92px;
-  margin-top: -30px;
+
+.avatar:hover::before,
+.avatar:hover::after {
+  --scale: 1;
+}
+
+.avatar::after {
+  --translate-y:calc(-1 * var(--arrow-size));
+  content: '';
+  border: var(--arrow-size) solid transparent;
+  border-top-color:var(--tooltip-color);
+  transform-origin: top center;
 }
 
 .about-p-container {
   color: white;
   font-size: 16px;
   padding: 15px;
+}
+
+.fullstack-container {
+  padding-top: 20px;
+}
+
+.fs-btn {
+  position : relative;
+  font-size: 20px;
+  cursor: pointer;
+  color: white;
+  border: none;
+  background:
+    linear-gradient(
+        to right,
+        transparent,
+        transparent
+        ),
+    linear-gradient(
+        to right,
+        #0ab4b4,
+        #0ab4b4,
+        #0ab4b4
+        );
+  background-size: 100% 3px, 0 3px;
+  background-position: 100% 100%, 0 100%;
+  background-repeat: no-repeat;
+  transition: background-size 400ms;
+  list-style: none;
+  padding: 5px 15px; 
+
+}
+.fs-btn:hover {
+  padding-left: -10px;
+  background-size: 0 3px, 100% 3px;
+}
+.list-toggle-on ul {
+  list-style: none;
+  padding-inline-start: 0;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+}
+
+.list-toggle-on ul li {
+  padding: 3px;
+  color: rgba(255, 166, 0);
+  
+}
+.list-toggle-on ul li:nth-child(1){
+  animation: animateIn 300ms linear;
+  animation-delay: 100ms;
+  animation-fill-mode: both;
+}
+.list-toggle-on ul li:nth-child(2){
+  animation: animateIn 300ms linear;
+  animation-delay: 200ms;
+  animation-fill-mode: both;
+}
+.list-toggle-on ul li:nth-child(3){
+  animation: animateIn 300ms linear;
+  animation-delay: 300ms;
+  animation-fill-mode: both;
+}
+.list-toggle-on ul li:nth-child(4){
+  animation: animateIn 300ms linear;
+  animation-delay: 400ms;
+  animation-fill-mode: both;
+}
+.list-toggle-on ul li:nth-child(5){
+  animation: animateIn 300ms linear;
+  animation-delay: 500ms;
+  animation-fill-mode: both;
+}
+.list-toggle-on ul li:nth-child(6){
+  animation: animateIn 300ms linear;
+  animation-delay: 600ms;
+  animation-fill-mode: both;
+}
+.list-toggle-on ul li:nth-child(7){
+  animation: animateIn 300ms linear;
+  animation-delay: 700ms;
+  animation-fill-mode: both;
+}
+.list-toggle-on ul li:nth-child(8){
+  animation: animateIn 300ms linear;
+  animation-delay: 800ms;
+  animation-fill-mode: both;
+}
+@keyframes animateIn {
+  0% {
+    opacity: 0;
+    transform:  translateX(-60px);
+  }
+  
+  100% {
+    opacity: 1;
+  }
+}
+
+.list-toggle-off {
+  display:none;
 }
 
 /* --------projects--------- */
@@ -429,25 +574,21 @@ h1, h2 {
   .about-img-container { 
     padding-bottom: 40px;
   }
-  .img-me {
-    width: 150px;
-    height: 150px;
-    margin-left: -135px;
-  }
-  .img-wife {
-    width: 150px;
-    height: 150px;
-    margin-left: 95px;
-    margin-top: -47px;
-  }
-  .img-kiddos {
-    width: 150px;
-    height: 150px;
-    margin-left: -135px;
-    margin-top: -47px;
-  }
   .about-p-container {
     font-size: 18px;
+  }
+  .list-toggle-on ul {
+    flex-direction: row;
+    justify-content: center;
+    position : relative
+  }
+
+  .list-toggle-on ul li {
+    padding: 10px;
+    border-right: 1px solid ;
+  }
+  .list-toggle-on ul li:nth-child(8) {
+    border-right: none;
   }
   /* -----Projects-----  */
   .projects {
@@ -485,7 +626,7 @@ h1, h2 {
     display: flex;
     justify-content: center;
     align-content:center;
-    padding-top: 150px
+    padding-top: 80px
   }
   .about-p-container {
     display: flex;
@@ -497,14 +638,51 @@ h1, h2 {
   }
   .about-img-container {
     display:flex;
-    align-content:center;
-    padding: 25px 50px;
-    padding-top: 0;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-right: 135px;
+    height: 320px;
   }
-  .about-img {
-    border: 5px solid white;
-    /* width: 200px;
-    height: 220px; */
+  /* this dictates the position of the tooltip*/
+  .avatar::before,
+  .avatar::after {
+    --scale: 0;
+    --arrow-size: 10px;
+    --tooltip-color: var(--darkgreen2);
+    
+    position: absolute;
+    right: -.25rem;
+    left: 50%;
+    transform: translateX(var(--translate-x, 0)) translateY(100%) scale(var(--scale));
+    transition: 50ms transform;
+    transform-origin: center left;
+  }
+
+  .avatar::before {
+    --translate-x: calc(60% - var(--arrow-size));
+    content: attr(data-tooltip);
+    color: white;
+    padding: .5rem;
+    border-radius: .3rem;
+    text-align: center;
+    width: max-content;
+    width: 100%;
+    background-color:var(--tooltip-color);
+  }
+
+  .avatar:hover::before,
+  .avatar:hover::after {
+    --scale: 1;
+  }
+
+  .avatar::after {
+    --translate-x: 15%;
+    position: absolute;
+    top:17px;
+    content: '';
+    border: var(--arrow-size) solid transparent;
+    border-right-color:var(--tooltip-color);
+    transform-origin: center right;
   }
   /*------Projects-------*/
   .formSection {
