--- a/src/App.css
+++ b/src/App.css
@@ -73,660 +73,10 @@ h1, h2 {
   border-bottom: 1px solid;
 }
 
-/* -----------navbar----------  */
-
-.navbar {
-  height: 100vh;
-  width: 42px;
-  display: flex;
-  padding-left: 0;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  border-right: 1px solid;
-  z-index: 2;
-}
-
-.menu-bars {
-  font-size: 2rem;
-  background: none;
-}
-
-.nav-menu {
-  width: 125px;
-  height: 100vh;
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  position: fixed;
-  top: 0;
-  left: -100%;
-  transition: 850ms;
-}
-
-.nav-menu.active {
-  left: 0;  
-  transition: 350ms;
-  z-index: 3;
-  
-}
-
-.nav-text {
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  list-style: none;
-  height: 60px;
-}
-
-.nav-text a {
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  color: white;
-  font-size: 18px;
-  width: 95%;
-  height: 100%;
-  padding: 0 16px;
-}
-
-.nav-text a:hover {
-  background-color: var(--green2);
-  color: rgba(255, 166, 0);
-}
-
-.nav-menu-items {
-  padding-left: 0;
-  width: 100%;
-  align-items: center;
-  
-}
-
-.navbar-toggle {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 50px;
-  height: 80px;
-}
-
-.span-menu {
-  margin-left: 16px;
-}
-
 /* --------Sections------- */
 .sections {
   padding-left: 42px;
 }
 
-/* ---------Home------------ */
-.main-home-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
-.title-container {
-  display: block;
-  position: relative;
-  z-index: 2;
-  padding: 5px;
-  width: 250px;
-  text-align: center;
-}
-
-.rt-container h2 {
-  color: rgba(255, 166, 0);
-}
-
-/* ----------rotating text --------- */
-.react-rotating-text-cursor {
-  animation: blinking-cursor 0.8s cubic-bezier(0.68, 0.01, 0.01, 0.99) 0s infinite;
-}
-
-@keyframes blinking-cursor {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-/* ----------About------------ */
-
-.about-container {
-  display: flex;
-  justify-content: center;
-  position: relative;
-  height: 100vh;
-  z-index: 2;
-}
-
-.about-heading-container {
-  z-index: 1;
-  display: block;
-  position: relative;
-  text-align: center;
-  width: 80%;
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-.about-heading-container h2 {
-  font-size: 30px;
-  text-decoration: underline var(--highlight);
-}
-
-.about-p-img-container {
-  padding-top: 40px;
-}
-
-.about-img-container { 
-  padding-bottom: 30px;
-  display: flex;
-  flex-direction: row;
-  justify-content:space-around;
-  padding-top: 15px;
-}
-
-.me{
-  background-image: url("./img/HeadShot2.jpg");
-}
-.wife {
-  background-image: url("./img/Wife.jpg");
-}
-.kiddos {
-  background-image: url("./img/Kiddos.jpg");
-}
-
-
-.avatar {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  background-size: cover;
-  position: relative;
-}
-
-/* this dictates the position of the tooltip*/
-.avatar::before,
-.avatar::after {
-  --scale: 0;
-  --arrow-size: 10px;
-  --tooltip-color: var(--darkgreen2);
-  
-  position: absolute;
-  top: -.25rem;
-  left: 50%;
-  transform: translateX(-50%) translateY(var(--translate-y, 0)) scale(var(--scale));
-  transition: 50ms transform;
-  transform-origin: bottom center;
-}
-
-.avatar::before {
-  --translate-y: calc(-100% - var(--arrow-size));
-  content: attr(data-tooltip);
-  color: white;
-  padding: .5rem;
-  border-radius: .3rem;
-  text-align: center;
-  width: max-content;
-  width: 100%;
-  background-color:var(--tooltip-color);
-}
-
-.avatar:hover::before,
-.avatar:hover::after {
-  --scale: 1;
-}
-
-.avatar::after {
-  --translate-y:calc(-1 * var(--arrow-size));
-  content: '';
-  border: var(--arrow-size) solid transparent;
-  border-top-color:var(--tooltip-color);
-  transform-origin: top center;
-}
-
-.about-p-container {
-  color: white;
-  font-size: 16px;
-  padding: 15px;
-}
-
-.fullstack-container {
-  padding-top: 20px;
-}
-
-.fs-btn {
-  position : relative;
-  font-size: 20px;
-  cursor: pointer;
-  color: white;
-  border: none;
-  background:
-    linear-gradient(
-        to right,
-        transparent,
-        transparent
-        ),
-    linear-gradient(
-        to right,
-        rgba(255, 166, 0),
-        rgba(255, 166, 0),
-        rgba(255, 166, 0)
-        );
-  background-size: 100% 3px, 0 3px;
-  background-position: 100% 100%, 0 100%;
-  background-repeat: no-repeat;
-  transition: background-size 400ms;
-  list-style: none;
-  padding: 5px 15px; 
-  padding-right: 37px
-}
-
-.arr-dwn {
-  position: absolute;
-  right: 10px;
-  top: 7px;
-}
-
-.fs-btn:hover {
-  padding-left: -10px;
-  background-size: 0 3px, 100% 3px;
-}
-.list-toggle-on ul {
-  
-  list-style: none;
-  padding-inline-start: 0;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  padding:20px 5px;
-}
-
-.list-toggle-on ul li {
-  padding: 3px;
-  color: rgb(255, 166, 0);
-  
-}
-.list-toggle-on ul li:nth-child(1){
-  animation: animateIn 300ms linear;
-  animation-delay: 100ms;
-  animation-fill-mode: both;
-}
-.list-toggle-on ul li:nth-child(2){
-  animation: animateIn 300ms linear;
-  animation-delay: 200ms;
-  animation-fill-mode: both;
-}
-.list-toggle-on ul li:nth-child(3){
-  animation: animateIn 300ms linear;
-  animation-delay: 300ms;
-  animation-fill-mode: both;
-}
-.list-toggle-on ul li:nth-child(4){
-  animation: animateIn 300ms linear;
-  animation-delay: 400ms;
-  animation-fill-mode: both;
-}
-.list-toggle-on ul li:nth-child(5){
-  animation: animateIn 300ms linear;
-  animation-delay: 500ms;
-  animation-fill-mode: both;
-}
-.list-toggle-on ul li:nth-child(6){
-  animation: animateIn 300ms linear;
-  animation-delay: 600ms;
-  animation-fill-mode: both;
-}
-.list-toggle-on ul li:nth-child(7){
-  animation: animateIn 300ms linear;
-  animation-delay: 700ms;
-  animation-fill-mode: both;
-}
-.list-toggle-on ul li:nth-child(8){
-  animation: animateIn 300ms linear;
-  animation-delay: 800ms;
-  animation-fill-mode: both;
-}
-.list-toggle-on ul li:nth-child(9){
-  animation: animateIn 300ms linear;
-  animation-delay: 900ms;
-  animation-fill-mode: both;
-}
-@keyframes animateIn {
-  0% {
-    opacity: 0;
-    transform:  translateX(-60px);
-  }
-  
-  100% {
-    opacity: 1;
-  }
-}
-
-.list-toggle-off {
-  display:none;
-}
-
-/* --------projects--------- */
-.projects {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 100vh;
-  align-items: center;
-  z-index: 2;
-  position: relative;
-}
-
-.projects-h2 {
-  font-size: 30px;
-  text-decoration: underline var(--highlight);
-  z-index: 2;
-}
-
-.project-cards {
-  display: block;
-  position: relative;  
-  z-index: 2;
-}
-
-.card {
-  display: flex;  
-  justify-content: center; 
-  position: relative; 
-  text-align: center;
-  color: white;
-  width: 195px;
-  padding: 30px 0px;
-  margin: 50px 50px 0 30px;
-}
-
-.actions {
-  display: block;
-  padding-top: 50px;
-  padding-left: 8%;
-  margin-right: -20%;
-}
-
-.modal {
-  border-radius: 6px;
-  padding: 16px 16px 10px 16px;
-  text-align: center;
-  width: 25vh;
-  top: 40vh;
-  z-index: 2;
-  position: fixed;
-}
-
-.btn-box {
-  display: flex;
-  justify-content: space-around;
-  padding: 5px;
-}
-
-.pop-btn {
-  color: white;
-  font-size: 12px;
-  padding: 5px 10px;
-}
-
-.backdrop {
-  position: fixed;
-  z-index: 1;
-  width: 100%;
-  height: 100vh;
-  top: 0;
-  left: 0;
-}
-
-.btn {
-  font-size: 12px;
-  color: white;
-  padding: 10px 30px 10px 30px;
-  cursor: pointer;
-  transition: 0.4s;
-}
-
-.btn:hover {
-  background-color: var(--highlight);
-  border-color: white;
-}
-
-/* ---------Connect---------- */
-.connect-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  
-}
-
-.formSection {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  width: 250px;
-  color: white;
-  z-index: 2;
-}
-
-.info {
-  display: flex;
-  position: relative;
-  flex-direction: column;
-  height: 40%;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  /* ----this creates the line between form and text------- */
-  border-bottom: 10px solid rgba(30, 30, 30, 0.8);
-}
-
-.info h2 {
-  padding-bottom: 40px;
-}
-
-.info p {
-  font-size: 18px;
-}
-
-.sendForm {
-  z-index: 2;
-  padding: 40px 0;
-}
-
-.inputFields {
-  margin: 15px 0;
-  font-size: 16px;
-  padding: 10px;
-  width: 210px;
-  color: white;
-  outline: none;
-}
-
-#message {
-  width: 215px;
-  height: 100px;
-}
-
-.send-btn {
-  border: 1px solid var(--highlight);
-  font-size: 18px;
-  color: white;
-  margin-top: 20px;
-  padding: 10px 50px;
-  cursor: pointer;
-  transition: 0.5s;
-}
-
-.send-btn:hover {
-  background: rgba(20, 20, 20, 1);
-  padding: 10px 80px;
-}
-
-@media screen and (min-width: 768px){ 
-  /*--------Home---------*/
-  .title-container {
-    height: 90px;
-    width: 300px;
-    padding: 20px;
-  }
-  /* -------About-------   */
-  .about-heading-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  .about-heading-container h2 {
-    font-size: 45px;
-  }
-  .about-p-img-container {
-    padding-top: 80px;
-  }
-  .about-img-container { 
-    padding-bottom: 40px;
-  }
-  .about-p-container {
-    font-size: 18px;
-  }
-  .list-toggle-on {
-    position : absolute;
-  }
-  .list-toggle-on ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-  }
-
-  .list-toggle-on ul li {
-    padding: 10px;
-    border-right: 1px solid ;
-  }
-  .list-toggle-on ul li:nth-child(9) {
-    border-right: none;
-  }
-  /* -----Projects-----  */
-  .projects {
-    flex-direction: row;
-  }
-  .projects-h2 {
-    font-size: 45px;
-    padding-right: 40px;
-  }
-  .modal {
-    font-size: 30px;
-    width: 350px;
-  }
-  .pop-btn {
-    color: white;
-    font-size: 18px;
-    padding: 5px 15px;
-  }
-  /* ------Connect---- */
-  .formSection {
-    width: 80%;
-  }
-  .inputFields {
-    width: 250px;
-  }
-  #message {
-    width: 315px;
-    height: 150px;
-  }
-}
-
-@media screen and (min-width: 1020px){
-  /* -------About-------   */
-  .about-p-img-container{
-    display: flex;
-    justify-content: center;
-    align-content:center;
-    padding-top: 80px
-  }
-  .about-p-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 50%;
-    height: 250px;
-    margin-top: 2em;
-  }
-  .about-img-container {
-    display:flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding-right: 135px;
-    height: 320px;
-  }
-  /* this dictates the position of the tooltip*/
-  .avatar::before,
-  .avatar::after {
-    --scale: 0;
-    --arrow-size: 10px;
-    --tooltip-color: var(--darkgreen2);
-    
-    position: absolute;
-    right: -.25rem;
-    left: 50%;
-    transform: translateX(var(--translate-x, 0)) translateY(100%) scale(var(--scale));
-    transition: 50ms transform;
-    transform-origin: center left;
-  }
-
-  .avatar::before {
-    --translate-x: calc(60% - var(--arrow-size));
-    content: attr(data-tooltip);
-    color: white;
-    padding: .5rem;
-    border-radius: .3rem;
-    text-align: center;
-    width: max-content;
-    width: 100%;
-    background-color:var(--tooltip-color);
-  }
-
-  .avatar:hover::before,
-  .avatar:hover::after {
-    --scale: 1;
-  }
-
-  .avatar::after {
-    --translate-x: 15%;
-    position: absolute;
-    top:17px;
-    content: '';
-    border: var(--arrow-size) solid transparent;
-    border-right-color:var(--tooltip-color);
-    transform-origin: center right;
-  }
-  /*------Projects-------*/
-  .formSection {
-    flex-direction: row;
-    height: 500px;
-  }
-  .list-toggle-on {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-  }
-  .info {
-    justify-content: center;
-    padding:0 10px;
-    height: 500px;
-    width: 330px;
-    border-right: 10px solid rgba(30, 30, 30, 0.8);
-    border-bottom: none;
-  }
-  .sendForm {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    
-  }
-}
+/* @media screen and (min-width: 768px){ 
+} */
