--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -8,82 +8,18 @@
 }
 
 .projects-h2 {
+  padding-top: 30px;
   font-size: 30px;
   text-decoration: underline var(--highlight);
-
 }
-.card-container {  
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  top: 50px;
+.carousel-container {
+  margin-left: 43px;
 }
-
-.card {
+.slide-container {
   display: flex;
-  flex-direction: column;
-  height: 120px;
+  justify-content: center;
+}
+.slide-container img {
   width: 200px;
-  background-color: var(--darkgreen2);
-  border-radius: 10px;
-  box-shadow: -1px 0 20px #000;
-  transition: 0.4s ease-out;
-  position: relative;
-}
-
-.card:hover {
-  transform: translateX(50px);
-  transition: 0.4s ease-out;
-}
-
-.card:hover ~ .card {
-  position: relative;
-  /* left: -25px; */
-  transition: 0.4s ease-out;
-}
-
-.title {
-  color: white;
-  font-weight: 300;
-  display: flex;
-  padding-top: 10px;
-  padding-left: 15px;
-}
-
-.bar {
-  padding-top: 10px;
-  padding-left:10px;
-  height: 5px;
-  width: 88%;
-}
-
-.emptybar {
-  background-color: #2e3033;
-  width: 100%;
-  height: 100%;
-}
-
-.filledbar {
-  position: absolute;
-  top: 42px;
-  z-index: 3;
-  width: 0px;
-  height: 5px;
-  background: var(--highlight);
-  background: linear-gradient(90deg, var(--highlight) 0%, rgba(217,147,0,1) 65%, rgba(255,186,0,1) 100%);
-  transition: 0.6s ease-out;
-}
-
-.card:hover .filledbar {
-  width: 88%;
-  height: 5px;
-  transition: 0.4s ease-out;
-}
-/* .project-title {
-  position: absolute;
-  right: 15px;
-  bottom: 10px;
-} */
-.project-title a{
-  text-decoration: none;
+  height: 200px;
 }
